# vemotion

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  settings.toml
src/backend/: main.py
src/vemotion/: __init__.py  __main__.py  config.py  consts.py  generation.py
src/vemotion/backend/: main.py
src/vemotion/cv/: cv.py
src/vemotion/frontend/: __main__.py
web/: index.html
